--- a/contact_form/config/database.yml
+++ b/contact_form/config/database.yml
@@ -2,14 +2,14 @@ development:
   adapter: mysql2 
   database: contact_form_dev
   username: root 
-  password: Welcome2ggk
+  password: password
 test: 
   adapter: mysql2 
   database: contact_form_test
   username: root
-  password: Welcome2ggk
+  password: password
 production: 
   adapter: mysql2
   database: contact_form_prod
   username: root
-  password: Welcome2ggk
+  password: password
